# fast-api-template

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn_config.sh  pyproject.toml
src/: start_gunicorn.py  start_uvicorn.py
src/core/: config.py  containers.py  exceptions.py  logger.py  logging.conf  server.py
src/core/authentification/: jwt.py
src/core/containers_utils/: auth_service_di.py  base.py  test_service_di.py  user_service_di.py
src/database/: database.py
src/database/init/: init.sql
src/migrations/: env.py
src/migrations/versions/: 2025_01_25_1457-8a92a2d39cd3_initial_commit.py
src/modules/: base_entity.py  base_pydantic.py  base_repo.py  entities.py  responses.py  routers.py
src/modules/auth/: models.py  router.py  service.py
src/modules/role/: router.py
src/modules/test/: entity.py  models.py  repo.py  router.py  service.py
src/modules/user/: entity.py  models.py  repo.py  roles.py  router.py  service.py
